--- a/env/.env.staging
+++ b/env/.env.staging
@@ -1,6 +1,7 @@
 ENV= staging
-URL= https://pet-shop.buckhill.com.hr/
+URL= "https://pet-shop.buckhill.com.hr/"
+ADMIN_URL: https://pet-shop.buckhill.com.hr/api/v1/admin/login
 ADMIN_EMAIL: "admin@buckhill.co.uk"
-ADMIN_PASS: "admin"
-USER: "lloyd79@example.com"
-PASSWORD: "userpassword"
+ADMIN_PWD: "admin"
+PAUSER_PWD: "userpassword"
+TOKEN:""
