Update env file with users url

--- a/env/.env.staging
+++ b/env/.env.staging
@@ -1,7 +1,8 @@
 ENV= staging
 URL= "https://pet-shop.buckhill.com.hr/"
 ADMIN_URL: https://pet-shop.buckhill.com.hr/api/v1/admin/login
+USERS_URL: https://pet-shop.buckhill.com.hr/api/v1/admin/user-listing
 ADMIN_EMAIL: "admin@buckhill.co.uk"
 ADMIN_PWD: "admin"
-PAUSER_PWD: "userpassword"
+USER_PWD: "userpassword"
 TOKEN:""
