Update env file with products url

--- a/env/.env.staging
+++ b/env/.env.staging
@@ -6,3 +6,5 @@ ADMIN_EMAIL: "admin@buckhill.co.uk"
 ADMIN_PWD: "admin"
 USER_PWD: "userpassword"
 TOKEN:""
+CLEANUP_UUID: "0e6f475f-74de-3c2d-a6e6-ac7bc1cc7f1a"
+PRODUCTS_URL: "https://pet-shop.buckhill.com.hr/api/v1/products"
